force-app/main/default/objects/Eaton_Integration_Variables__mdt/Eaton_Integration_Variables__mdt.object-meta.xml
<CustomObject>
    <label>Eaton Integration Variables</label>
    <pluralLabel>Eaton Integration Variables</pluralLabel>
</CustomObject>