force-app/main/default/objects/Eaton_Integration_Variables__mdt/fields/Batch_File_Size_Limit__c.field-meta.xml
<CustomField>
    <fullName>Batch_File_Size_Limit__c</fullName>
    <label>Batch File Size Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>