force-app/main/default/objects/Eaton_Integration_Variables__mdt/fields/Eaton_File_Receiver__c.field-meta.xml
<CustomField>
    <fullName>Eaton_File_Receiver__c</fullName>
    <label>Eaton File Receiver</label>
    <type>Email</type>
</CustomField>