force-app/main/default/objects/Eaton_Integration_Variables__mdt/fields/File_Size_Limit__c.field-meta.xml
<CustomField>
    <fullName>File_Size_Limit__c</fullName>
    <description>File size limit in bytes</description>
    <label>File Size Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>