force-app/main/default/objects/Eaton_Integration_Variables__mdt/fields/Paccar_Sender_Address__c.field-meta.xml
<CustomField>
    <fullName>Paccar_Sender_Address__c</fullName>
    <description>This is the email address from Org Wide Email Address to be used for auto email</description>
    <label>Paccar Sender Address</label>
    <type>Email</type>
</CustomField>