force-app/main/default/objects/Eaton_Integration_Variables__mdt/fields/Queue__c.field-meta.xml
<CustomField>
    <fullName>Queue__c</fullName>
    <label>Queue</label>
    <length>50</length>
    <type>Text</type>
</CustomField>