force-app/main/default/objects/Eaton_Integration_Variables__mdt/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <description>This is the user name used by Eaton Integration connection</description>
    <label>User Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>